# Study-Planner-RAG_Based-Agent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  plan.md  pyproject.toml
backend/app/: api.py  auth.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  utils.py
backend/app/routers/: __init__.py  auth.py  chat.py  courses.py  documents.py  jobs.py  search.py  study_plans.py  topics.py
backend/app/services/: chat.py  chunking.py  document_parser.py  documents.py  jobs.py  llm_chat.py  milvus_store.py  pipeline.py  study_plans.py  topics.py
backend/app/services/embeddings/: base.py  factory.py  hash_embedder.py  voyage_embedder.py
backend/app/services/retrievers/: base.py  factory.py  postgres.py
eval/: README.md  auto_benchmark.json  benchmark_template.json  evaluation_report.md  real_course_benchmark_cs521.json
eval/results/: agent_vs_plain_llm.json  agent_vs_plain_llm_cs521.json  retrieval.json  retrieval_cs521.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  constants.ts  main.tsx  router.ts  styles.css  types.ts
frontend/src/components/: AuthView.tsx  ChatView.tsx  DocumentChunksView.tsx  SearchView.tsx  StudyPlanView.tsx  TopicReviewView.tsx  TopicsView.tsx  WorkspaceView.tsx
scripts/: eval_agent_benchmark.py  eval_common.py  eval_dump_course_chunks.py  eval_retrieval.py  smoke_phase1.py  smoke_phase2.py  smoke_phase3.py  smoke_phase4.py  smoke_phase4_vector.py  smoke_phase5.py  smoke_phase6.py  smoke_phase7.py  smoke_phase8.py
